[package]
name = "marvin32"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [ "Mahmoud Al-Qudsi <mqudsi@neosmart.net>" ]
description = "DOS-resistant hash algorithm, sometimes faster than SipHash"
keywords = [ "hashing", "hash", "hasher", ".net", "csharp" ]
categories = [ "algorithms" ]
repository = "https://github.com/mqudsi/marvin32-rs"
homepage = "http://neosmart.net/blog/?s=marvin32"

[dependencies]

[dev-dependencies]
divan = "0.1.0"
fastrand = "2.0.1"

[[bench]]
name = "strings"
harness = false
